
[package]
name = "nadi_cairo"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

# make sure you use the same version of nadi_core, your nadi-system is in
[dependencies]
abi_stable = "0.11.3"
cairo-rs = { version = "0.21.2", features = ["pdf", "png", "svg"] }
nadi_core = {version="0.8.0", path="../nadi-system/nadi_core", features=["parser", "graphics"]}
